<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailTodoActivity"
    android:background="@color/soft_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/soft_gray"
            android:src="@drawable/ic_arrow_back"
            android:padding="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_todo"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:textSize="35dp"
            android:textColor="@color/black"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_edited"
                android:paddingTop="8dp"
                android:textSize="16dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/tv_edited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dd MM yyyy hh:mm"
                android:paddingTop="8dp"
                android:textSize="16dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/title"
                android:layout_marginTop="50dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/training_android_studio"
                android:textSize="14sp"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:layout_marginTop="32dp"
                android:textSize="14sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/description_training_android_studio"
                android:textColor="@color/black"
                android:textSize="14sp"
                />
        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_create"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        app:elevation="20dp"
        />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

</RelativeLayout>