<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTodolistActivity"
    android:background="@color/soft_gray"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/soft_gray"
            android:src="@drawable/ic_arrow_back"
            android:padding="8dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_todo"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:textSize="35dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_todo_will_be_visible_to_others"
            android:paddingTop="8dp"
            android:textSize="14dp"
            />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="textNoSuggestions"
            android:ems="10"
            android:layout_marginTop="80dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_style"
            android:padding="8dp"
            />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_style"
            android:padding="8dp"
            android:gravity="top|start"
            />
        <TextView
            android:id="@+id/tv_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|end"
            android:text="0/100"
            />
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textColor="@color/red"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_check"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        app:elevation="20dp"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

</RelativeLayout>