<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.kepo.request.LoginRequest" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="50dp"
                android:gravity="center"

                >

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logo_sm"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/make_stalking_easier"
                    android:gravity="center"
                    android:textSize="18dp"
                    />
            </LinearLayout>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:text="@={user.username}"
            android:inputType="text"
            android:ems="10"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_login"
            android:padding="12dp"
            />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:text="@={user.password}"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="18dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_login"
            android:padding="12dp"
            />


        <Button
            android:id="@+id/btn_login"
            android:background="@drawable/round_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="18dp"

            />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="80dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/_2021_by_brian_karnadi_japar"
                />

        </LinearLayout>

    </LinearLayout>

</layout>